# rust-actix-web-sample

./: Cargo.toml  README.md  docker-compose.yml
graphql/: Cargo.toml  Dockerfile
redis/: Cargo.toml  Dockerfile  README.md
redis/src/: main.rs
sqlx/: Cargo.toml  README.md  docker-compose.yml
sqlx/schema/: user.sql
sqlx/src/: error.rs  main.rs  model.rs
src/: main.rs
