[package]
name = "sqlx"
version = "0.1.0"
authors = ["sjisjis <shouji.takumi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
serde = "1.0"
serde_derive = "1.0"
log = "0.4"
structopt = "0.3"

sqlx = { version = "0.4", features = [ "mysql", "runtime-actix-rustls", "chrono" ] }
env_logger = "0.7"
chrono = { version = "0.4", features = ["serde"] } 
anyhow = "1.0"
serde_json = "1.0"